Added lower-level examples

--- a/KatanaIntro/KatanaIntro.csproj
+++ b/KatanaIntro/KatanaIntro.csproj
@@ -63,7 +63,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="ProgramLowLevel.cs" />
+    <Compile Include="ProgramSimple.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
